--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -13,11 +13,11 @@
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank">【萧茗看世界】美亿万富翁大战华为</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/4/30/n12917244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918712-Keith_1920_cn-150x120.jpg" align ="left"></a>“在当今商业中，速度是最值钱的。数据领域的转型，要的就是这个速度。现在不是大鱼吃小鱼，而是快鱼吃慢鱼”。在谈到5G技术需求时，前副国务卿基思?克拉奇（Keith Krach）如是说。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 8:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank">分析：中共是自己的最大敌人</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918426.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/1210291432372519-600x400-150x120.jpg" align ="left"></a>知名中国政经专家、美国克雷蒙特麦肯纳学院（CMC）教授裴敏欣（Minxin Pei）周四（4月29日）发文分析指出，中国在全球经济中的作用使中共以傲慢自居，增加其侵略性行动。而这种做法恰恰会把自己推向危险的边缘，使原本中立的国家更加靠向美国，从而增加了对中共的生存威胁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 7:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918735.md#1" target="_blank">杨晖律师：中国到处是高压线 不止一根</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918735.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12919340-yanghuiFotoJet-150x120.jpg" align ="left"></a>近日，福建厦门律师杨晖罕见因转让旧书被当地文化局行政处罚，罚款近三十万元人民币。杨晖质疑被查其实是因为代理敏感案件，并在网上为冤情发声。目前他已被迫从律所辞职。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 2:07 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank">法轮大法洪传29周年 纽约学员向师尊祝寿</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918709-148833-150x120.jpg" align ="left"></a>“5.13世界法轮大法日”即将来临，大纽约区部分法轮功学员数百人，聚集在华人社区法拉盛的大公园，怀着感恩的心情，共同庆祝法轮大法洪传29周年，并向法轮功创始人李洪志先生祝贺生日快乐。
+<tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank">法轮大法洪传29周年 纽约学员向师尊祝寿</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918707.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918709-148833-150x120.jpg" align ="left"></a>“5.13世界法轮大法日”即将来临，大纽约区部分法轮功学员数百人在华人社区法拉盛的公园，怀着感恩的心情，共同庆祝法轮大法洪传29周年，并向法轮功创始人李洪志先生祝贺生日快乐。
 
 https://youtu.be/2ZYPdYJMdXY
 
-5月1日的纽约，春光明媚，生机盎然。在城市绿洲——法拉盛凯辛娜走廊公园（Kissena Corridor .........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 12:11 PM							</td></tr>
+5月1日的纽约，春光明媚，生机盎然。在城市绿洲——法拉盛凯辛娜走廊公园（Kissena Corridor Park.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 12:11 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918699.md#1" target="_blank">中企悄悄买巨额英国资产 含能源国防领域</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918699.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/10/1110121409031793-150x120.jpg" align ="left"></a>最新研究发现，中国悄悄购置了1340亿英镑的英国资产，从核电厂到私立学校和比萨连锁店；有近200家英国公司要么被中国投资者控制，要么作为小股东入股。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 11:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918788.md#1" target="_blank">河北高校持续封校 学生快憋疯五一冲校门</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/2/n12918788.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918814-photo_2021-05-02_11-30-34-150x120.jpg" align ="left"></a>自去年9月份开始至今，河北省大部分高校以疫情为由实行封闭式管理，无奈的学生近日刷微博求解封，“快憋疯了”。5月1日，河北地质大学北校区的学生还发生冲校门事件。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 11:15 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918565.md#1" target="_blank">美下周恢复中国学生签证处理 部分专业受限</a><br></h3><a href="https://github.com/yowasr378/djy/blob/master/gb/21/5/1/n12918565.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-143649596-600x400-150x120.jpg" align ="left"></a>一位美国高级官员表示，美国驻华使领馆将于下周二（5月4日）恢复对中国学生的签证预约处理，但对部分具有“高科技”背景的学生将继续实行限制。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 9:14 AM							</td></tr>
